src/components/MainFooter/MainFooter.css
.main-footer-container {
    color: rgba(255, 255, 255, 0.840);
    font-size: 1rem;
    text-align: center;
    padding: 3rem 0 5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: calc(100% - 3rem);
    margin: auto;
    gap: 1rem;

}




.footer-logo-container {
    width: 50%;
    max-width: 12rem;
}

.footer-logo-container img {
    width: 100%;
}

.footer-warning-text-container {
    /* */
}


.footer-warning-important {
    all: unset;
    color: rgb(229, 9, 20);
    font-family: "NetflixMedium";
    display: block;
    margin-top: 0.6rem;
}

.footer-copyright-container {
    font-size: 0.7rem;
}



.footer-logo-title {
    font-size: 1.125rem;
}

.footer-redirect-links-container{
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    row-gap: 1rem;
    text-align: left;
    margin-bottom: 1rem;
}



.footer-redirect-links-container a{
    color: rgba(255, 255, 255, 0.7);
    text-decoration: underline;
}

.footer-redirect-links-container a:hover{
    cursor: pointer;
}

.footer-redirect-links-container a:active{
    color: red;
}

@media (min-width: 20em){
    .footer-redirect-links-container{
        grid-template-columns: repeat(2, 1fr);
        column-gap: 1rem;
    }
}

@media (min-width: 30em){
    .footer-redirect-links-container{
        column-gap: 3rem;
    }
}

@media (min-width: 37.5em) {
    .main-footer-container {
        max-width: calc(100% - 4rem);
        font-size: 1.2rem;
    }

    .footer-logo-container {
        max-width: 20rem;
    }

    .footer-logo-container img {
        max-width: calc(100% - 4rem);
    }

    .footer-copyright-container {
        font-size: 0.8rem;
    }
}

@media (min-width: 40em){
    .footer-redirect-links-container{
        column-gap: 6rem;
    }
}


@media (min-width: 50em) {
    .footer-redirect-links-container{
        column-gap: 10rem;
    }

    .footer-warning-text-container {
        max-width: calc( 83.33333333333334% - 10rem );
    }

    
    .footer-redirect-links-container{
        max-width: calc( 83.33333333333334% - 10rem );
    }



    .footer-logo-title {
        font-size: 1.4rem;
    }

    .footer-logo-container {
        width: 70%;
    }
}

@media (min-width: 80em) {
    .footer-redirect-links-container{
        column-gap: 20rem;
    }

    .footer-warning-text-container {
        max-width: calc( 63.33333333333334% - 10rem );
    }

    .footer-redirect-links-container{
        max-width: calc( 63.33333333333334% - 10rem );
    }
}

@media (min-width: 90em) {
    .footer-redirect-links-container{
        column-gap: 30rem;
    }

}

